feat(account): add account deletion
