# backend/src/app.ts
@@ -8,6 +8,7 @@ import { authRouter } from './routes/auth.js';
 import { exercisesRouter } from './routes/exercises.js';
 import { workoutsRouter } from './routes/workouts.js';
 import { workoutExercisesRouter } from './routes/workoutExercises.js';
+import { accountRouter } from './routes/account.js';
 
 export const app = express();
 
@@ -71,6 +72,7 @@ app.use('/api/auth', authRouter);
 app.use('/api/exercises', exercisesRouter);
 app.use('/api/workouts', workoutsRouter);
 app.use('/api/workout-exercises', workoutExercisesRouter);
+app.use('/api/account', accountRouter);
 
 // eslint-disable-next-line @typescript-eslint/no-unused-vars -- Express error handler requires 4 params
 app.use((err: Error, _req: express.Request, res: express.Response, _next: express.NextFunction) => {
